optimized debug info Fixed NativeMemory