@@ -1,5 +1,7 @@
 package net.optifine.util;
 
+import java.lang.management.BufferPoolMXBean;
+import java.lang.management.ManagementFactory;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.List;
@@ -8,11 +10,8 @@ import java.util.function.LongSupplier;
 import net.optifine.Config;
 
 public class NativeMemory {
-	private static LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][] {
-			{ "sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed" },
-			{ "jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed" } });
-	private static LongSupplier bufferMaximumSupplier = makeLongSupplier(
-			new String[][] { { "sun.misc.VM", "maxDirectMemory" }, { "jdk.internal.misc.VM", "maxDirectMemory" } });
+	private static final LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][] {{"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}, {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}}, makeDefaultAllocatedSupplier());
+	private static final LongSupplier bufferMaximumSupplier = makeLongSupplier(new String[][] {{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}}, makeDefaultMaximumSupplier());
 
 	public static long getBufferAllocated() {
 		return bufferAllocatedSupplier == null ? -1L : bufferAllocatedSupplier.getAsLong();
@@ -22,60 +21,81 @@ public class NativeMemory {
 		return bufferMaximumSupplier == null ? -1L : bufferMaximumSupplier.getAsLong();
 	}
 
-	private static LongSupplier makeLongSupplier(String[][] paths) {
-		List<Throwable> list = new ArrayList<Throwable>();
+	private static LongSupplier makeLongSupplier(String[][] paths, LongSupplier defaultSupplier)
+	{
+		final List<Throwable> list = new ArrayList<>();
 
-		for (int i = 0; i < paths.length; ++i) {
-			String[] astring = paths[i];
-
+		for (final String[] string : paths) {
 			try {
-				LongSupplier longsupplier = makeLongSupplier(astring);
-				return longsupplier;
+				LongSupplier longsupplier = makeLongSupplier(string);
+				if (longsupplier != null) return longsupplier;
 			} catch (Throwable throwable) {
 				list.add(throwable);
 			}
 		}
 
-		for (Throwable throwable1 : list) {
-			Config.warn("" + throwable1.getClass().getName() + ": " + throwable1.getMessage());
+		for (Throwable throwable1 : list)
+		{
+			Config.warn("(Reflector) " + throwable1.getClass().getName() + ": " + throwable1.getMessage());
+		}
+
+		return defaultSupplier;
+	}
+
+	private static LongSupplier makeLongSupplier(String[] path) throws Exception
+	{
+		if (path.length < 2) {
+			return null;
+		} else {
+			Class<?> oclass = Class.forName(path[0]);
+			Method method = oclass.getMethod(path[1]);
+			method.setAccessible(true);
+			Object object = null;
+
+			for (int i = 2; i < path.length; ++i) {
+				String s = path[i];
+				object = method.invoke(object);
+				method = object.getClass().getMethod(s);
+				method.setAccessible(true);
+			}
+
+			final Method method1 = method;
+			final Object object1 = object;
+			return new LongSupplier() {
+				private boolean disabled = false;
+				public long getAsLong() {
+					if (this.disabled) {
+						return -1L;
+					} else {
+						try {
+							return (long) method1.invoke(object1);
+						} catch (Throwable throwable) {
+							Config.warn("(Reflector) " + throwable.getClass().getName() + ": " + throwable.getMessage());
+							this.disabled = true;
+							return -1L;
+						}
+					}
+				}
+			};
+		}
+	}
+
+	private static BufferPoolMXBean getDirectBufferPoolMXBean() {
+		for (final BufferPoolMXBean bufferpoolmxbean : ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class)) {
+			if (Config.equals(bufferpoolmxbean.getName(), "direct")) {
+				return bufferpoolmxbean;
+			}
 		}
 
 		return null;
 	}
 
-	private static LongSupplier makeLongSupplier(String[] path) throws Exception {
-		if (path.length < 2) {
-			return null;
-		}
-		Class<?> cls = Class.forName(path[0]);
-		Method method = cls.getMethod(path[1], new Class[0]);
-		method.setAccessible(true);
-		Object object = null;
-		for (int i = 2; i < path.length; ++i) {
-			String name = path[i];
-			object = method.invoke(object, new Object[0]);
-			method = object.getClass().getMethod(name, new Class[0]);
-			method.setAccessible(true);
-		}
-		final Object objectF = object;
-		final Method methodF = method;
-		LongSupplier ls = new LongSupplier() {
-			private boolean disabled = false;
+	private static LongSupplier makeDefaultAllocatedSupplier() {
+		final BufferPoolMXBean bufferpoolmxbean = getDirectBufferPoolMXBean();
+		return bufferpoolmxbean == null ? null : bufferpoolmxbean::getMemoryUsed;
+	}
 
-			@Override
-			public long getAsLong() {
-				if (this.disabled) {
-					return -1L;
-				}
-				try {
-					return (Long) methodF.invoke(objectF, new Object[0]);
-				} catch (Throwable e) {
-					Config.warn("" + e.getClass().getName() + ": " + e.getMessage());
-					this.disabled = true;
-					return -1L;
-				}
-			}
-		};
-		return ls;
+	private static LongSupplier makeDefaultMaximumSupplier() {
+		return () -> Runtime.getRuntime().maxMemory();
 	}
 }
